--- a/STM32L051C8T6TR_IO_32F44_PLUS.ioc
+++ b/STM32L051C8T6TR_IO_32F44_PLUS.ioc
@@ -50,8 +50,8 @@ NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.I2C2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C2_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -138,7 +138,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
 RCC.APB1TimFreq_Value=2097000
